# rescript-logger

./: .gitignore  HISTORY.md  README.md  bsconfig.json  devbox.json  dune-project  esy.json  linux.patch  package.json  ppx.json  rescript-logger-ppx.opam  shell.nix  windows.patch
.ci/: azure-pipelines.yml
.ci/release/: build.yml  bundle.yml  install.yml  pipeline.yml  publish.yml
.ci/script/: package.json.js  postinstall.js
.github/workflows/: ci.yml  pipeline.yml
.github/workflows/scripts/: copy-binaries.js  postinstall.js  write-package-json.js
bs-log/: bsconfig.json  package.json
bs-log-ppx/: bsconfig.json  package.json
bs-log-ppx/src/: LogPpx.re
bs-log-ppx/test/: Test.re
esy.lock/: index.json
examples/: bsconfig.json  package.json  rescript.json
examples/src/: ReScript.res  Reason.re
lib/: bsconfig.json  package.json  rescript.json
lib/src/: Browser.re  Browser.res  Interface.res  Location.res  Module.re  Node.re  Node.res
lib/src/loggers/: Browser.res  Edge.res  Node.res  Node.resi  Universal.res
nix/ocaml/: flake.nix
ppx/: BsLogPpx.re  LogPpx.re  ReScriptLoggerPpx.ml  ResLogPpx.re  ResLoggerPpx.ml  ResLoggerPpx.re  dune
ppx.esy.lock/: index.json
ppx/lib/: Lib.ml  dune
re-log/: bsconfig.json  package.json
re-log-ppx/: bsconfig.json  package.json
re-log-ppx/src/: LogPpx.re
re-log-ppx/test/: Test.re
re-log/src/: Log.re  Log.rei
scripts/: build-linux-arm64.sh  user-data.linux-arm64.sh
src/: BrowserLogger.re  NodeLogger.re
test/: Test.re
