opam-version: "2.0"
name: "rescript-logger-ppx"
version: "3.1.0"
synopsis: "Logging implementation for ReScript"
description: """
Logging implementation for ReScript
"""
maintainer: "Alex Fedoseev <alex@35mil.me>"
authors: "Alex Fedoseev <alex@35mil.me>"
license: "MIT"
homepage: "https://github.com/shakacode/rescript-logger.git"
bug-reports: "https://github.com/shakacode/rescript-logger/issues"
dev-repo: "git+https://github.com/shakacode/rescript-logger.git"
depends: [
  "ocaml" { = "4.14.1" }
  "dune" { = "3.11.1" }
  "ppxlib" { = "0.30.0" }
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
